--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,9 +57,21 @@
 
 	/* My classes */
 
-	.my-p {
-		overflow-wrap: normal;
-		width: 300px;
+	.my-icons {
+		width: 40px;
+		height: 40px;
+		margin-right: 20px;
+	}
+
+	.my-div {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-content: center;
+	}
+
+	.my-label {
+		padding-top: 6px;
 	}
 
 /* Grid */
