--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,39 @@
 		padding-top: 6px;
 	}
 
+	.my-column-container {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+		padding-left: 60px;
+		padding-right: 60px;
+	}
+
+	.my-columns {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	.my-blurb {
+		text-align: left;
+	}
+
+	.my-proj-blurb-cont {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-content: center;
+	}
+
+	.my-project-blurb {
+		width: auto;
+		text-align: left;
+		padding-left: 50px;
+	}
+
 /* Grid */
 
 	.row {
