--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,10 +57,20 @@
 
 	/* My classes */
 
+	.project-name {
+		margin-bottom: 5px;
+	}
+
 	.my-icons {
 		width: 40px;
 		height: 40px;
 		margin-right: 20px;
+	}
+
+	.my-small-icons {
+		width: 25px;
+		height: 25px;
+		margin-right: 10px;
 	}
 
 	.my-div {
